--- a/browser-example/browser.html
+++ b/browser-example/browser.html
@@ -10,13 +10,10 @@
 
 
       // Fill them as should
-      //let fixedUsername = ""
-      //let fixedPassword = ""
-      let fixedUsername = 'vesa@cozify.fi'
-      let fixedPassword = 'Fortum!123'
-      let fixedHubId = 'cd3bd9e4-7943-11e5-a567-544a168673f2'
-      let fixedDeviceId = '53d59fdc-bd8d-4231-a4a0-d6c6ee51d30e' // Power socet
-
+      let fixedUsername = '...@cozify.fi'
+      let fixedPassword = 'xxx'
+      let fixedHubId = 'xxxx-xxxx'
+      let fixedDeviceId = 'abcd-efgh'
 
       let LANGUAGES = CozifySDK.LANGUAGES;
       let USER_STATES = CozifySDK.USER_STATES;
