--- a/browser-example/browser.html
+++ b/browser-example/browser.html
@@ -17,6 +17,7 @@
       let fixedDeviceName = 'Windpow'
 
 
+
       let LANGUAGES = CozifySDK.LANGUAGES;
       let USER_STATES = CozifySDK.USER_STATES;
 
@@ -39,18 +40,21 @@
       CozifySDK.setAuthenticated( cozifyCloudToken )
 
 
-      /* Example use of just doing one poll
+      // Example use of just doing one poll
       CozifySDK.connectHubByTokens(fixedHubId, cozifyHubKey)
 
       CozifySDK.watchChanges('hubs', (newHubsState, oldHubsState) => {
         if (newHubsState[fixedHubId] && !newHubsState[fixedHubId].selected) {
           CozifySDK.doPoll(fixedHubId, true).then((status)=>{
             console.info('Poll status', status)
-            CozifySDK.startPairingById(fixedHubId, true)
+            CozifySDK.startPairingById(fixedHubId, true).then((status) => {
               setTimeout(function() {
-                CozifySDK.stopPairingById(fixedHubId);
-                console.warn('Pairing stopped')
+                CozifySDK.stopPairingById(fixedHubId).then((status) => {
+                  console.warn('Pairing stopped')
+                }).catch((error)=>{console.error(error)});
               }, 30000);
+            }).catch((error)=>{console.error("Browser:", error)});
+
           }).catch((error)=>{console.error(error)})
         };
 
@@ -63,24 +67,28 @@
         }
 
       });
-      */
+      /*
       CozifySDK.startDiscoveringHubs(fixedHubId);
 
       // POLLINGS
       CozifySDK.watchChanges('hubs', (newHubsState, oldHubsState) => {
         if (newHubsState[fixedHubId] && !newHubsState[fixedHubId].selected) {
-          CozifySDK.selectHubById(fixedHubId, true);
-          CozifySDK.stopDiscoveringHubs();
-          setTimeout(function() {
-            CozifySDK.stopPollingById(fixedHubId);
-          }, 20000);
+          CozifySDK.selectHubById(fixedHubId, true).then((status) => {
+            CozifySDK.stopDiscoveringHubs();
+            setTimeout(function() {
+              CozifySDK.stopPollingById(fixedHubId)
+            }, 20000);
+          }).catch((error)=>{debugger; console.error("Browser:", error)});
+
         };
 
-          CozifySDK.startPairingById(fixedHubId, true)
-          setTimeout(function() {
-            CozifySDK.stopPairingById(fixedHubId);
-            console.error('Pairing stopped')
-          }, 30000);
+          CozifySDK.startPairingById(fixedHubId, true).then((status) => {
+            setTimeout(function() {
+              CozifySDK.stopPairingById(fixedHubId).then((status) => {
+                console.warn('Pairing stopped')
+              }).catch((error)=>{console.error(error)});
+            }, 30000);
+          }).catch((error)=>{console.error("Browser:", error)});
 
 
         if (newHubsState[fixedHubId] && oldHubsState[fixedHubId]){
@@ -90,7 +98,7 @@
         }
 
       });
-
+      */
       // PAIRIMGS
       let devicePaired = false;
       CozifySDK.watchChanges('pairings', (newPairingsState, oldPairingsState) => {
@@ -109,9 +117,9 @@
                       state.isOn = !state.isOn;
 
                       // CozifySDK.sendDeviceStateCmd(fixedHubId, device.id, state, ['isOn', 'type']);
-                      CozifySDK.identifyDevice(fixedHubId, device.id)
-                      CozifySDK.ignorePairingByIds(fixedHubId, device.id, false)
-                      CozifySDK.setDeviceMeta(fixedHubId, device.id, fixedDeviceName, ["652ec684-c02f-4490-9f9a-b6b29f81a92d"])
+                      CozifySDK.identifyDevice(fixedHubId, device.id).then((response) => console.warn("Browser identity: ", response)).catch(() => {debugger})
+                      CozifySDK.ignorePairingByIds(fixedHubId, device.id, false).then((response) => console.warn("Browser ignore: ", response)).catch(() => {debugger})
+                      CozifySDK.setDeviceMeta(fixedHubId, device.id, fixedDeviceName, ["652ec684-c02f-4490-9f9a-b6b29f81a92d"]).then((response)=>console.warn("Browser meta: ", response)).catch(() => {debugger})
                     }
 
                   }
