--- a/browser-example/browser.html
+++ b/browser-example/browser.html
@@ -21,11 +21,14 @@
       let LANGUAGES = CozifySDK.LANGUAGES;
       let USER_STATES = CozifySDK.USER_STATES;
 
+      CozifySDK.useTestcloud()
+
+
       CozifySDK.watchChanges('user.state', (newState, oldState) => {
         console.log('user.state changed from %s to %s', oldState, newState);
       });
 
-      /** Listener for specific changes */
+      // Listener for specific changes
       CozifySDK.watchChanges('connections.cloudState', (newState, oldState) => {
         console.log('connections.cloudState changed from %s to %s', oldState, newState);
       });
@@ -39,7 +42,6 @@
 
       CozifySDK.setAuthenticated( cozifyCloudToken )
 
-      /*
       // Example use of just doing one poll;
       //
       CozifySDK.connectHubByTokens(fixedHubId, cozifyHubKey, false)
@@ -67,7 +69,7 @@
         }
 
       });
-      */
+      /*
 
       // Example of doing full discory and starting to poll
       CozifySDK.startDiscoveringHubs(fixedHubId);
@@ -100,6 +102,7 @@
         }
 
       });
+      */
 
       // PAIRIMGS
       let devicePaired = false;
